--- a/app/templates/exchange/index.html
+++ b/app/templates/exchange/index.html
@@ -9,19 +9,31 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <div class="form">
-                    <input type="number" name="form-amount" placeholder="Summa" class="form-control">
+                    <input type="number" name="form-amount" placeholder="Summa" class="form-control"
+                    {% if form_amount %}
+                        value="{{ form_amount }}"
+                    {% endif %}
+                    >
                     <select name="from-curr" class="form-control" value="{{ from_curr }}">
-                        {% for cur in currencies %}}
-                        <option value="{{ cur }}">
-                            {{ cur }}
+                        {% for curr in currencies %}}
+                        <option value="{{ curr }}"
+                        {% if from_curr == curr %}
+                                selected
+                        {% endif %}
+                        >
+                            {{ curr }}
                         </option>
                         {% endfor %}
 
                     </select>
                     <select name="to-curr" class="form-control" value="{{ to_curr }}">
-                        {% for cur in currencies %}}
-                        <option value="{{ cur }}">
-                            {{ cur }}
+                        {% for curr in currencies %}}
+                        <option value="{{ curr }}"
+                        {% if to_curr == curr %}
+                                selected
+                        {% endif %}
+                        >
+                            {{ curr }}
                         </option>
                         {% endfor %}
                     </select>
