Finish weather adn exchange APIs

--- a/app/templates/weather/weather.html
+++ b/app/templates/weather/weather.html
@@ -8,7 +8,7 @@
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form.name }}
-                <input type="text" name="city" placeholder="Shaxringizni kiriting" class="city">
+<!--                <input type="text" name="city" placeholder="Shaxringizni kiriting" class="city">-->
                 <br>
                 <input type="submit" name="send" value="Qidirish" class="but">
             </form>
@@ -16,6 +16,10 @@
         <div class="elem">
             <h2>Ma'lumotlar</h2>
             {% for info in all_info %}
+            <form action="{% url 'deletecity' info.city_pk %}" method="post" class="x">
+                {% csrf_token %}
+                <input type="submit" value="X" class="remove">
+            </form>
             <div class="info">
                 <p class="data">
                     <b>Shaxar:</b> {{ info.city }} <br><br>
